--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,11 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
+      - run: pwd
       - checkout
 
       # Build the application
-      - run: go build -o app
+      - run: go build -o app ./api-backend-challenge
 
       # Run tests
       - run: go test -v ./...
