--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+version: '2.1'
+orbs:
+  go: circleci/go@1.7.3
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+  build:
+    executor:
+      name: go/default
+      tag: '1.16'
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      - go/load-cache
+      - go/mod-download
+      - go/save-cache
 workflows:
-  say-hello-workflow:
+  main:
     jobs:
-      - say-hello
+      - build
