--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,10 @@
-version: '2.1'
-orbs:
-  go: circleci/go@1.7.3
+version: 2.1
 jobs:
   build:
-    executor:
-      name: go/default
-      tag: '1.16'
+    docker:
+      - image: golang:1.19  # Replace <version> with the desired Go version
     steps:
       - checkout
-      - go/load-cache
-      - go/mod-download
-      - go/save-cache
-workflows:
-  main:
-    jobs:
-      - build
+      - run:
+          name: Build and test
+          command: go build ./... && go test ./...
