testing circle ci job steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
       - checkout
       - run:
           name: Build and test
-          command: go build ./... && go test ./...
+          command: go mod download && go test ./...
