--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     ports:
       - "3306:3306"
 
-  adminer:
-    image: adminer
+  managerer:
+    image: managerer
     restart: always
     ports:
       - 8080:8080
