--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - "3306:3306"
 
   managerer:
-    image: managerer
+    image: adminer
     restart: always
     ports:
       - 8080:8080
