--- a/config/config.json
+++ b/config/config.json
@@ -14,6 +14,7 @@
   "doc": {
     "title": "api-backend-challenge",
     "description": "",
+    "enabled": true,
     "version": "1.0.0"
   },
   "mysql": {
