--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,6 @@ jobs:
       - run:
           name: Build and test
           command: go mod download && go test ./...
+#      - run:
+#          name: Create docker image and publish
+#          command: docker build -t api-backend-challenge . && docker tag my-repository my-repository:my-tag && docker push my-repository:my-tag
