added encryption to task summary

--- a/config/example.env
+++ b/config/example.env
@@ -16,3 +16,4 @@ MYSQL_POOL_CONN=5
 MYSQL_CONN_LIFETIME=60s
 KAFKA_BROKER=localhost:9092
 KAFKA_TOPIC=sword.task
+SECURITY_SECRET_KEY=707045b3f0bd5fxa
